--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,8 +35,8 @@ android {
     // declared in /android/app/build.gradle file of the Flutter project.
     // Replace it with a version number if this plugin requires a specific NDK version.
     // (e.g. ndkVersion "23.1.7779620")
-//    ndkVersion = "28.0.13004108"
-    ndkVersion = android.ndkVersion
+    ndkVersion = "28.0.13004108"
+//    ndkVersion = android.ndkVersion
 
     // Invoke the shared CMake build with the Android Gradle Plugin.
     externalNativeBuild {
@@ -54,8 +54,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
@@ -65,7 +65,7 @@ android {
             cmake {
                 arguments "-DBUILD_FOR_SYSTEM_NAME=android", "-DANDROID_STL=c++_shared", "-DANDROID_TOOLCHAIN=clang -v"
                 cppFlags "-frtti -fexceptions -v -DANDROID -std=c++17"
-                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+                abiFilters 'x86_64', 'armeabi-v7a', 'arm64-v8a'
             }
         }
     }
@@ -75,6 +75,7 @@ android {
         if (name == "assembleDebug") {
             doFirst {
                 println("com.cypherstack.flutter_libsparkmobile android.ndkVersion is ${android.ndkVersion}")
+                println("com.cypherstack.flutter_libsparkmobile flutter.ndkVersion is ${flutter.ndkVersion}")
                 println("com.cypherstack.flutter_libsparkmobile ndkVersion in use is $ndkVersion")
             }
         }
