Add support for iOS Simulator.

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ example/macos/Podfile.lock
 # Ignore build artifacts.
 macos/flutter_libsparkmobile.framework
 scripts/macos/build
-ios/flutter_libsparkmobile.framework
+ios/flutter_libsparkmobile.xcframework
 scripts/ios/build
 src/deps/sparkmobile/CMakeLists.txt
 src/deps/sparkmobile/secp256k1/CMakeLists.txt
